// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-pagination.vue Demo-上一页和下一页 1`] = `
<div>
  <div
    class="root"
    direction="vertical"
    type=""
    vusion-slot-name="default"
  >
    <nav
      class="root"
      size="normal"
    >
      <!---->
       
      <!---->
       
      <a
        class="item-wrap"
        disabled="disabled"
      >
        <a
          role="text"
        >
          上一页
        </a>
      </a>
       
      <a
        class="item"
        selected="selected"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
      >
        3
      </a>
      <a
        class="item"
      >
        4
      </a>
      <a
        class="item"
      >
        5
      </a>
      <a
        class="item"
        role="blank"
      >
        ...
      </a>
      <a
        class="item"
      >
        10
      </a>
      <a
        class="item"
      >
        11
      </a>
       
      <a
        class="item-wrap"
      >
        <a
          role="text"
        >
          下一页
        </a>
      </a>
       
      <!---->
       
    </nav>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-pagination.vue Demo-修复样式字体无效的bug 1`] = `
<div>
  <div
    class="root"
    direction="vertical"
    type=""
    vusion-slot-name="default"
  >
    <nav
      class="root"
      size="normal"
      style="font-size: 18px; color: rgb(236, 41, 41);"
    >
      <!---->
       
      <!---->
       
      <a
        class="item-wrap"
        disabled="disabled"
      >
        <i
          class="item"
          role="prev"
        />
      </a>
       
      <a
        class="item"
        selected="selected"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
      >
        3
      </a>
      <a
        class="item"
      >
        4
      </a>
      <a
        class="item"
      >
        5
      </a>
      <a
        class="item"
        role="blank"
      >
        ...
      </a>
      <a
        class="item"
      >
        10
      </a>
      <a
        class="item"
      >
        11
      </a>
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="next"
        />
      </a>
       
      <!---->
       
    </nav>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-pagination.vue Demo-全部配置 1`] = `
<div>
  <div
    class="root"
    direction="vertical"
    type=""
    vusion-slot-name="default"
  >
    <nav
      class="root"
      size="normal"
    >
      <span
        class="total"
      >
        共 75 条
      </span>
       
      <div
        class="root sizer"
        tabindex="0"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          请选择
        </span>
         
        <!---->
         
        <div
          style="direction: ltr;"
          tags-overflow="collapse"
        >
          <!---->
           
          <!---->
           
                10条/页
             
          <!---->
        </div>
         
        <!---->
         
        <!---->
         
        <transition-stub
          name="fade"
          style="width: 100%;"
        >
          <div
            class="root"
            style="display: none;"
          >
            <div>
              <div
                class="root"
                selected="selected"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                10条/页
             
                <!---->
              </div>
              <div
                class="root"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                40条/页
             
                <!---->
              </div>
              <div
                class="root"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                50条/页
             
                <!---->
              </div>
              <div
                class="root"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                100条/页
             
                <!---->
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </transition-stub>
      </div>
       
      <a
        class="item-wrap"
        disabled="disabled"
      >
        <i
          class="item"
          role="prev"
        />
      </a>
       
      <a
        class="item"
        selected="selected"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
      >
        3
      </a>
      <a
        class="item"
      >
        4
      </a>
      <a
        class="item"
      >
        5
      </a>
      <a
        class="item"
        role="blank"
      >
        ...
      </a>
      <a
        class="item"
      >
        7
      </a>
      <a
        class="item"
      >
        8
      </a>
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="next"
        />
      </a>
       
      <span
        class="jumper-wrap"
      >
        跳至
            
        <div
          buttondisplay="tail"
          class="root jumper"
          hidebuttons="true"
        >
          <span>
            b
          </span>
           
          <span
            style="display: none;"
          >
            
          </span>
           
          <!---->
           
          <input
            buttondisplay="tail"
            hidebuttons="true"
            type="text"
          />
            
          <!---->
        </div>
        
            页
      </span>
       
    </nav>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-pagination.vue Demo-全部配置 2`] = `
<div>
  <div
    class="root"
    direction="vertical"
    type=""
    vusion-slot-name="default"
  >
    <nav
      class="root"
      size="normal"
    >
      <span
        class="total"
      >
        共 75 条
      </span>
       
      <div
        class="root sizer"
        tabindex="0"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          请选择
        </span>
         
        <!---->
         
        <div
          style="direction: ltr;"
          tags-overflow="collapse"
        >
          <!---->
           
          <!---->
           
                20条/页
             
          <!---->
        </div>
         
        <!---->
         
        <!---->
         
        <transition-stub
          name="fade"
          style="width: 100%;"
        >
          <div
            class="root"
            style="display: none;"
          >
            <div>
              <div
                class="root"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                10条/页
             
                <!---->
              </div>
              <div
                class="root"
                selected="selected"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                20条/页
             
                <!---->
              </div>
              <div
                class="root"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                50条/页
             
                <!---->
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </transition-stub>
      </div>
       
      <a
        class="item-wrap"
        disabled="disabled"
      >
        <i
          class="item"
          role="prev"
        />
      </a>
       
      <a
        class="item"
        selected="selected"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
      >
        3
      </a>
      <a
        class="item"
      >
        4
      </a>
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="next"
        />
      </a>
       
      <span
        class="jumper-wrap"
      >
        跳至
            
        <div
          buttondisplay="tail"
          class="root jumper"
          hidebuttons="true"
        >
          <span>
            b
          </span>
           
          <span
            style="display: none;"
          >
            
          </span>
           
          <!---->
           
          <input
            buttondisplay="tail"
            hidebuttons="true"
            type="text"
          />
            
          <!---->
        </div>
        
            页
      </span>
       
    </nav>
     
    <nav
      class="root"
      size="normal"
    >
      <span
        class="total"
      >
        共 75 条
      </span>
       
      <div
        class="root sizer"
        tabindex="0"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          请选择
        </span>
         
        <!---->
         
        <div
          style="direction: ltr;"
          tags-overflow="collapse"
        >
          <!---->
           
          <!---->
           
                30条/页
             
          <!---->
        </div>
         
        <!---->
         
        <!---->
         
        <transition-stub
          name="fade"
          style="width: 100%;"
        >
          <div
            class="root"
            style="display: none;"
          >
            <div>
              <div
                class="root"
                selected="selected"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                30条/页
             
                <!---->
              </div>
              <div
                class="root"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                50条/页
             
                <!---->
              </div>
              <div
                class="root"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                100条/页
             
                <!---->
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </transition-stub>
      </div>
       
      <a
        class="item-wrap"
        disabled="disabled"
      >
        <i
          class="item"
          role="prev"
        />
      </a>
       
      <a
        class="item"
        selected="selected"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
      >
        3
      </a>
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="next"
        />
      </a>
       
      <span
        class="jumper-wrap"
      >
        跳至
            
        <div
          buttondisplay="tail"
          class="root jumper"
          hidebuttons="true"
        >
          <span>
            b
          </span>
           
          <span
            style="display: none;"
          >
            
          </span>
           
          <!---->
           
          <input
            buttondisplay="tail"
            hidebuttons="true"
            type="text"
          />
            
          <!---->
        </div>
        
            页
      </span>
       
    </nav>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-pagination.vue Demo-只读和禁用 1`] = `
<div>
  <div
    class="root"
    direction="vertical"
    type=""
    vusion-slot-name="default"
  >
    <nav
      class="root"
      readonly="readonly"
      size="normal"
    >
      <!---->
       
      <!---->
       
      <a
        class="item-wrap"
        disabled="disabled"
      >
        <i
          class="item"
          role="prev"
        />
      </a>
       
      <a
        class="item"
        selected="selected"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
      >
        3
      </a>
      <a
        class="item"
      >
        4
      </a>
      <a
        class="item"
      >
        5
      </a>
      <a
        class="item"
        role="blank"
      >
        ...
      </a>
      <a
        class="item"
      >
        10
      </a>
      <a
        class="item"
      >
        11
      </a>
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="next"
        />
      </a>
       
      <!---->
       
    </nav>
     
    <nav
      class="root"
      readonly="readonly"
      size="normal"
    >
      <span
        class="total"
      >
        共 75 条
      </span>
       
      <div
        class="root sizer"
        readonly="readonly"
        tabindex=""
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          请选择
        </span>
         
        <!---->
         
        <div
          style="direction: ltr;"
          tags-overflow="collapse"
        >
          <!---->
           
          <!---->
           
                20条/页
             
          <!---->
        </div>
         
        <!---->
         
        <!---->
         
        <transition-stub
          name="fade"
          style="width: 100%;"
        >
          <div
            class="root"
            style="display: none;"
          >
            <div>
              <div
                class="root"
                readonly="readonly"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                10条/页
             
                <!---->
              </div>
              <div
                class="root"
                readonly="readonly"
                selected="selected"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                20条/页
             
                <!---->
              </div>
              <div
                class="root"
                readonly="readonly"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                50条/页
             
                <!---->
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </transition-stub>
      </div>
       
      <a
        class="item-wrap"
        disabled="disabled"
      >
        <i
          class="item"
          role="prev"
        />
      </a>
       
      <a
        class="item"
        selected="selected"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
      >
        3
      </a>
      <a
        class="item"
      >
        4
      </a>
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="next"
        />
      </a>
       
      <span
        class="jumper-wrap"
      >
        跳至
            
        <div
          buttondisplay="tail"
          class="root jumper"
          hidebuttons="true"
          readonly="readonly"
        >
          <span>
            b
          </span>
           
          <span
            style="display: none;"
          >
            
          </span>
           
          <!---->
           
          <input
            buttondisplay="tail"
            hidebuttons="true"
            readonly="readonly"
            type="text"
          />
            
          <!---->
        </div>
        
            页
      </span>
       
    </nav>
     
    <nav
      class="root"
      disabled="disabled"
      size="normal"
    >
      <!---->
       
      <!---->
       
      <a
        class="item-wrap"
        disabled="disabled"
      >
        <i
          class="item"
          role="prev"
        />
      </a>
       
      <a
        class="item"
        selected="selected"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
      >
        3
      </a>
      <a
        class="item"
      >
        4
      </a>
      <a
        class="item"
      >
        5
      </a>
      <a
        class="item"
        role="blank"
      >
        ...
      </a>
      <a
        class="item"
      >
        10
      </a>
      <a
        class="item"
      >
        11
      </a>
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="next"
        />
      </a>
       
      <!---->
       
    </nav>
     
    <nav
      class="root"
      disabled="disabled"
      size="normal"
    >
      <span
        class="total"
      >
        共 75 条
      </span>
       
      <div
        class="root sizer"
        disabled="disabled"
        tabindex=""
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          请选择
        </span>
         
        <!---->
         
        <div
          style="direction: ltr;"
          tags-overflow="collapse"
        >
          <!---->
           
          <!---->
           
                20条/页
             
          <!---->
        </div>
         
        <!---->
         
        <!---->
         
        <transition-stub
          name="fade"
          style="width: 100%;"
        >
          <div
            class="root"
            style="display: none;"
          >
            <div>
              <div
                class="root"
                disabled="disabled"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                10条/页
             
                <!---->
              </div>
              <div
                class="root"
                disabled="disabled"
                selected="selected"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                20条/页
             
                <!---->
              </div>
              <div
                class="root"
                disabled="disabled"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                50条/页
             
                <!---->
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </transition-stub>
      </div>
       
      <a
        class="item-wrap"
        disabled="disabled"
      >
        <i
          class="item"
          role="prev"
        />
      </a>
       
      <a
        class="item"
        selected="selected"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
      >
        3
      </a>
      <a
        class="item"
      >
        4
      </a>
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="next"
        />
      </a>
       
      <span
        class="jumper-wrap"
      >
        跳至
            
        <div
          buttondisplay="tail"
          class="root jumper"
          disabled="disabled"
          hidebuttons="true"
        >
          <span>
            b
          </span>
           
          <span
            style="display: none;"
          >
            
          </span>
           
          <!---->
           
          <input
            buttondisplay="tail"
            disabled="disabled"
            hidebuttons="true"
            type="text"
          />
            
          <!---->
        </div>
        
            页
      </span>
       
    </nav>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-pagination.vue Demo-基本用法 1`] = `
<div>
  <nav
    class="root"
    size="normal"
  >
    <!---->
     
    <!---->
     
    <a
      class="item-wrap"
    >
      <i
        class="item"
        role="prev"
      />
    </a>
     
    <a
      class="item"
    >
      1
    </a>
    <a
      class="item"
    >
      2
    </a>
    <a
      class="item"
      role="blank"
    >
      ...
    </a>
    <a
      class="item"
    >
      4
    </a>
    <a
      class="item"
    >
      5
    </a>
    <a
      class="item"
      selected="selected"
    >
      6
    </a>
    <a
      class="item"
    >
      7
    </a>
    <a
      class="item"
    >
      8
    </a>
    <a
      class="item"
      role="blank"
    >
      ...
    </a>
    <a
      class="item"
    >
      10
    </a>
    <a
      class="item"
    >
      11
    </a>
     
    <a
      class="item-wrap"
    >
      <i
        class="item"
        role="next"
      />
    </a>
     
    <!---->
     
  </nav>
</div>
`;

exports[`u-pagination.vue Demo-基本用法 2`] = `
<div>
  <div
    class="root"
    direction="vertical"
    type=""
    vusion-slot-name="default"
  >
    <nav
      class="root"
      size="normal"
    >
      <!---->
       
      <!---->
       
      <a
        class="item-wrap"
        disabled="disabled"
      >
        <i
          class="item"
          role="prev"
        />
      </a>
       
      <a
        class="item"
        selected="selected"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
      >
        3
      </a>
      <a
        class="item"
      >
        4
      </a>
      <a
        class="item"
      >
        5
      </a>
      <a
        class="item"
        role="blank"
      >
        ...
      </a>
      <a
        class="item"
      >
        10
      </a>
      <a
        class="item"
      >
        11
      </a>
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="next"
        />
      </a>
       
      <!---->
       
    </nav>
     
    <nav
      class="root"
      size="normal"
    >
      <!---->
       
      <!---->
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="prev"
        />
      </a>
       
      <a
        class="item"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
        role="blank"
      >
        ...
      </a>
      <a
        class="item"
      >
        4
      </a>
      <a
        class="item"
      >
        5
      </a>
      <a
        class="item"
        selected="selected"
      >
        6
      </a>
      <a
        class="item"
      >
        7
      </a>
      <a
        class="item"
      >
        8
      </a>
      <a
        class="item"
        role="blank"
      >
        ...
      </a>
      <a
        class="item"
      >
        10
      </a>
      <a
        class="item"
      >
        11
      </a>
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="next"
        />
      </a>
       
      <!---->
       
    </nav>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-pagination.vue Demo-小尺寸 1`] = `
<div>
  <div
    class="root"
    direction="vertical"
    type=""
    vusion-slot-name="default"
  >
    <nav
      class="root"
      size="small"
    >
      <span
        class="total"
      >
        共 75 条
      </span>
       
      <div
        class="root sizer"
        tabindex="0"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          请选择
        </span>
         
        <!---->
         
        <div
          style="direction: ltr;"
          tags-overflow="collapse"
        >
          <!---->
           
          <!---->
           
                20条/页
             
          <!---->
        </div>
         
        <!---->
         
        <!---->
         
        <transition-stub
          name="fade"
          style="width: 100%;"
        >
          <div
            class="root"
            style="display: none;"
          >
            <div>
              <div
                class="root"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                10条/页
             
                <!---->
              </div>
              <div
                class="root"
                selected="selected"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                20条/页
             
                <!---->
              </div>
              <div
                class="root"
                style="direction: ltr;"
                vusion-slot-name="default"
              >
                <!---->
                 
                50条/页
             
                <!---->
              </div>
               
              <!---->
               
              <!---->
            </div>
             
            <!---->
          </div>
        </transition-stub>
      </div>
       
      <a
        class="item-wrap"
        disabled="disabled"
      >
        <i
          class="item"
          role="prev"
        />
      </a>
       
      <a
        class="item"
        selected="selected"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
      >
        3
      </a>
      <a
        class="item"
      >
        4
      </a>
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="next"
        />
      </a>
       
      <span
        class="jumper-wrap"
      >
        跳至
            
        <div
          buttondisplay="tail"
          class="root jumper"
          hidebuttons="true"
        >
          <span>
            b
          </span>
           
          <span
            style="display: none;"
          >
            
          </span>
           
          <!---->
           
          <input
            buttondisplay="tail"
            hidebuttons="true"
            type="text"
          />
            
          <!---->
        </div>
        
            页
      </span>
       
    </nav>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-pagination.vue Demo-显示总条数 1`] = `
<div>
  <div
    class="root"
    direction="vertical"
    type=""
    vusion-slot-name="default"
  >
    <nav
      class="root"
      size="normal"
    >
      <span
        class="total"
      >
        共 75 条
      </span>
       
      <!---->
       
      <a
        class="item-wrap"
        disabled="disabled"
      >
        <i
          class="item"
          role="prev"
        />
      </a>
       
      <a
        class="item"
        selected="selected"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
      >
        3
      </a>
      <a
        class="item"
      >
        4
      </a>
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="next"
        />
      </a>
       
      <!---->
       
    </nav>
     
    <nav
      class="root"
      size="normal"
    >
      <span
        class="total"
      >
        
            1-20条，共75条
        
      </span>
       
      <!---->
       
      <a
        class="item-wrap"
        disabled="disabled"
      >
        <i
          class="item"
          role="prev"
        />
      </a>
       
      <a
        class="item"
        selected="selected"
      >
        1
      </a>
      <a
        class="item"
      >
        2
      </a>
      <a
        class="item"
      >
        3
      </a>
      <a
        class="item"
      >
        4
      </a>
       
      <a
        class="item-wrap"
      >
        <i
          class="item"
          role="next"
        />
      </a>
       
      <!---->
       
    </nav>
     
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`u-pagination.vue Demo-显示数量 1`] = `
<div>
  <nav
    class="root"
    size="normal"
  >
    <!---->
     
    <!---->
     
    <a
      class="item-wrap"
    >
      <i
        class="item"
        role="prev"
      />
    </a>
     
    <a
      class="item"
    >
      1
    </a>
    <a
      class="item"
      role="blank"
    >
      ...
    </a>
    <a
      class="item"
    >
      5
    </a>
    <a
      class="item"
      selected="selected"
    >
      6
    </a>
    <a
      class="item"
    >
      7
    </a>
    <a
      class="item"
      role="blank"
    >
      ...
    </a>
    <a
      class="item"
    >
      11
    </a>
     
    <a
      class="item-wrap"
    >
      <i
        class="item"
        role="next"
      />
    </a>
     
    <!---->
     
  </nav>
</div>
`;

exports[`u-pagination.vue Demo-简洁版 1`] = `
<div>
  <nav
    class="root"
    simple="true"
    size="normal"
  >
    <a
      class="item"
      disabled="disabled"
      role="prev"
    />
     
    <div
      class="jumper-wrap"
    >
      <div
        buttondisplay="tail"
        class="root jumper"
        hidebuttons="true"
      >
        <span>
          b
        </span>
         
        <span
          style="display: none;"
        >
          
        </span>
         
        <!---->
         
        <input
          buttondisplay="tail"
          hidebuttons="true"
          type="text"
        />
          
        <!---->
      </div>
       / 11
        
    </div>
     
    <a
      class="item"
      role="next"
    />
  </nav>
</div>
`;

exports[`u-pagination.vue Demo-简洁版 2`] = `
<div>
  <div
    class="root"
    direction="vertical"
    type=""
    vusion-slot-name="default"
  >
    <nav
      class="root"
      simple="true"
      size="normal"
    >
      <a
        class="item"
        disabled="disabled"
        role="prev"
      />
       
      <div
        class="jumper-wrap"
      >
        <div
          buttondisplay="tail"
          class="root jumper"
          hidebuttons="true"
        >
          <span>
            b
          </span>
           
          <span
            style="display: none;"
          >
            
          </span>
           
          <!---->
           
          <input
            buttondisplay="tail"
            hidebuttons="true"
            type="text"
          />
            
          <!---->
        </div>
         / 11
        
      </div>
       
      <a
        class="item"
        role="next"
      />
    </nav>
     
    <nav
      class="root"
      readonly="readonly"
      simple="true"
      size="normal"
    >
      <a
        class="item"
        disabled="disabled"
        role="prev"
      />
       
      <div
        class="jumper-wrap"
      >
        <div
          buttondisplay="tail"
          class="root jumper"
          hidebuttons="true"
          readonly="readonly"
        >
          <span>
            b
          </span>
           
          <span
            style="display: none;"
          >
            
          </span>
           
          <!---->
           
          <input
            buttondisplay="tail"
            hidebuttons="true"
            readonly="readonly"
            type="text"
          />
            
          <!---->
        </div>
         / 11
        
      </div>
       
      <a
        class="item"
        role="next"
      />
    </nav>
     
    <nav
      class="root"
      disabled="disabled"
      simple="true"
      size="normal"
    >
      <a
        class="item"
        disabled="disabled"
        role="prev"
      />
       
      <div
        class="jumper-wrap"
      >
        <div
          buttondisplay="tail"
          class="root jumper"
          disabled="disabled"
          hidebuttons="true"
        >
          <span>
            b
          </span>
           
          <span
            style="display: none;"
          >
            
          </span>
           
          <!---->
           
          <input
            buttondisplay="tail"
            disabled="disabled"
            hidebuttons="true"
            type="text"
          />
            
          <!---->
        </div>
         / 11
        
      </div>
       
      <a
        class="item"
        role="next"
      />
    </nav>
     
    <!---->
     
    <!---->
  </div>
</div>
`;
